reply post 기능  route와 연결

--- a/seq-crud-exam/views/show.ejs
+++ b/seq-crud-exam/views/show.ejs
@@ -21,26 +21,36 @@
         </table>
         <input type="submit" value="전송">
     </form>
-
     <hr>
-    <h1>데이터 목록</h1>
-    <table>
-        <tr>
-            <td>제목</td>
-            <td>작성자</td>
-            <td>작성일</td>
-        </tr>
-        <% for (let post of posts) {%>
+
+    <% for(let post of posts) { %>
+        <table>
             <tr>
-                <td><%= post.title %></td>
-                <td><%= post.writer %></td>
-                <td><%= post.createdAt %></td>
-                <td><button><a href="/board/<%=post.id%>">수정</a></button></td>
-                 <form action="/board/<%=post.id%>?_method=DELETE" method="post">
-                    <td><input type="submit" value="삭제하기"/></td>
-                 </form>
+                <td>제목</td>
+                <td>작성자</td>
+                <td>작성일</td>
             </tr>
-        <% } %>
-    </table>
+                <tr>
+                    <td><%= post.title %></td>
+                    <td><%= post.writer %></td>
+                    <td><%= post.createdAt %></td>
+                    <td><button><a href="/board/<%=post.id%>">수정</a></button></td>
+                    <form action="/board/<%=post.id%>?_method=DELETE" method="post">
+                        <td><input type="submit" value="삭제하기"/></td>
+                    </form>
+                </tr>
+
+                <form action="/reply/<%=post.id%>" method="post">
+                    <tr>
+                        <td><input type="text" name="replyWriter" placeholder="작성자를 입력하세요"></td>
+                        <td><input type="text" name="replyContent" placeholder="내용을 입력하세요"></td>
+                    </tr>
+                    <tr>
+                        <td><input type="submit" value="댓글 등록"></td>
+                    </tr>
+                </form>
+        </table>
+        <hr>
+    <% } %>
 </body>
 </html>
