--- a/seq-crud-exam/views/edit.ejs
+++ b/seq-crud-exam/views/edit.ejs
@@ -12,7 +12,7 @@
     <form action="/board/<%=post.id%>?_method=put" method="post">
         <table>
             <tr>
-                <td><input type="text" name="edittitle" value="<%=post.title%>"></td>
+                <td><input type="text" name="editTitle" value="<%=post.title%>"></td>
             </tr>
             <tr>
                 <td><input type="text" name="editWriter" value="<%=post.writer%>"></td>
